--- a/fem/Ui.strings
+++ b/fem/Ui.strings
@@ -20,7 +20,7 @@
 "error payment inactive after restore" = "Your previous payment was restored, but the subscription has already expired. If you believe this is a mistake, please contact us by tapping the help icon at the top.";
 "error payment failed" = "Payments are unavailable at this moment. Make sure you are online, and try again later. If the problem persists, please contact us by tapping the help icon at the top.";
 "error payment not available" = "Payments are unavailable for this device. Either Apple Pay is not activated, or we do not handle purchases in your country yet.";
-"error payment canceled" = "Payment was canceled. You have not been charged.";
+"error payment canceled" = "The payment has been canceled. You have not been charged.";
 "error pack install" = "Could not install (or uninstall) this feature. Please try again later.";
 "error location failed fetching" = "Could not fetch locations.";
 "error unknown" = "An unknown problem occured. Please try again. If the problem persists, please contact us by tapping the help icon at the top.";
@@ -45,6 +45,10 @@
 
 "alert error header" = "Ooops!";
 "alert vpn expired header" = "BLOKADA+ expired";
+
+"notification vpn expired header" = "BLOKADA+ subscription expired";
+"notification vpn expired subtitle" = "The VPN is disabled";
+"notification vpn expired body" = "Please update your subscription to continue using BLOKADA+";
 
 "account active forever" = "Forever";
 
@@ -156,7 +160,7 @@
 "account unlock to show" = "Unlock to show your account ID";
 
 "account header logout" = "Log out";
-"account logout description" = "Please enter another account ID, or go back to keep using existing account (this app cannot be used without one).";
+"account logout description" = "Please enter another account ID, or go back to keep using your existing account (this app cannot be used without one).";
 "account id status unchanged" = "(unchanged)";
 "account action how to restore" = "How do I restore my old account?";
 
@@ -182,7 +186,7 @@
 "account lease label devices" = "Devices";
 "account lease label this device" = " (this device)";
 
-"account support action how help" = "How can we help?";
+"account support action how help" = "How can we help you?";
 "account support action kb" = "Open Knowledge Base";
 
 "payment header activated" = "Activated!";
