--- a/fem/Ui.strings
+++ b/fem/Ui.strings
@@ -23,7 +23,7 @@
 "error payment canceled" = "The payment has been canceled. You have not been charged.";
 "error pack install" = "Could not install (or uninstall) this feature. Please try again later.";
 "error location failed fetching" = "Could not fetch locations.";
-"error unknown" = "An unknown problem occured. Please try again. If the problem persists, please contact us by tapping the help icon at the top.";
+"error unknown" = "An unknown problem occurred. Please try again. If the problem persists, please contact us by tapping the help icon at the top.";
 
 "universal action continue" = "Continue";
 "universal action cancel" = "Cancel";
