--- a/fem/Ui.strings
+++ b/fem/Ui.strings
@@ -57,6 +57,9 @@
 "notification vpn expired subtitle" = "The VPN is disabled";
 "notification vpn expired body" = "Please update your subscription to continue using BLOKADA+";
 
+"notification update header" = "An update is available";
+"alert update body" = "Blokada %@ is now available for download. We recommend keeping the app up to date, and downloading it only from our official sources.";
+
 "account active forever" = "Forever";
 
 "main ask for permissions header" = "Just one more step";
@@ -252,6 +255,7 @@
 "app settings section system" = "System";
 "app settings action app info" = "Open App Information";
 "app settings action vpn profile" = "Open VPN Profile";
+"app settings action notifications" = "Open Notification Settings";
 "app settings section details" = "Details";
 "app settings status default" = "System default";
 
