--- a/fem/Ui.strings
+++ b/fem/Ui.strings
@@ -48,7 +48,7 @@
 "universal label help" = "Help";
 "universal status processing" = "Processing... Please wait.";
 "universal status copied to clipboard" = "Copied to Clipboard";
-"universal status restart required" = "Please restart the app for the changes to take effect."
+"universal status restart required" = "Please restart the app for the changes to take effect.";
 
 "alert error header" = "Ooops!";
 "alert vpn expired header" = "BLOKADA+ expired";
