--- a/fem/Ui.strings
+++ b/fem/Ui.strings
@@ -160,7 +160,7 @@
 "account action logout" = "Logout";
 "account action about" = "About";
 "account action tap to show" = "Tap to show";
-"account action restoring" = "Restoring account: %@"
+"account action restoring" = "Restoring account: %@";
 
 "account section header my subscription" = "My Subscription";
 "account section header general" = "General";
