--- a/fem/Ui.strings
+++ b/fem/Ui.strings
@@ -260,4 +260,4 @@
 "app settings status default" = "System default";
 
 "intro header" = "Blokada is Active!";
-"intro text" = "A blue ring means that Blokada is working.\n\nRemember, some ads, Like YouTube, cannot be blocked. However, you will notice a difference in many other apps.\n\nWe recommend you activate Always on VPN / Connect on Demand in your system settings.";
+"intro text" = "A blue ring means that Blokada is working.\n\nRemember, some ads, like YouTube, cannot be blocked. However, you will notice a difference in many other apps.\n\nWe recommend you activate Always on VPN / Connect on Demand in your system settings.";
