--- a/fem/Ui.strings
+++ b/fem/Ui.strings
@@ -24,6 +24,7 @@
 "error pack install" = "Could not install (or uninstall) this feature. Please try again later.";
 "error location failed fetching" = "Could not fetch locations.";
 "error unknown" = "An unknown problem occurred. Please try again. If the problem persists, please contact us by tapping the help icon at the top.";
+"error blocka dns in filtering mode" = "Blokada DNS is currently supported only in Plus mode. Please choose another DNS and try again.";
 
 "universal action continue" = "Continue";
 "universal action cancel" = "Cancel";
@@ -52,6 +53,7 @@
 
 "alert error header" = "Ooops!";
 "alert vpn expired header" = "BLOKADA+ expired";
+"alert download link body" = "For security reasons, to download a file, we need to open this website in your browser. Then, please tap the download link again.";
 
 "notification vpn expired header" = "BLOKADA+ subscription expired";
 "notification vpn expired subtitle" = "The VPN is disabled";
@@ -59,6 +61,7 @@
 
 "notification update header" = "An update is available";
 "alert update body" = "Blokada %@ is now available for download. We recommend keeping the app up to date, and downloading it only from our official sources.";
+"update label updated" = "Updated!";
 
 "account active forever" = "Forever";
 
@@ -94,6 +97,7 @@
 "home status detail paused" = "paused until timer ends";
 "home status detail active" = "blocking *ads* and *trackers*";
 "home status detail active with counter" = "blocked *%@* ads and trackers";
+"home status detail active slim" = "Blokada *Slim* is active";
 "home status detail plus" = "*+* protecting your *privacy*";
 "home status detail progress" = "please wait...";
 
@@ -114,6 +118,12 @@
 "pack category highlights" = "Highlights";
 "pack category active" = "Active";
 "pack category all" = "All";
+
+"advanced section header packs" = "Blocklists";
+"advanced section slugline packs" = "Activate for more restrictive blocking";
+"advanced section slugline apps" = "Choose apps that should never be blocked";
+"advanced section slugline encryption" = "Adjust your encryption level and DNS";
+"advanced action slim migrate to full" = "You are using Blokada Slim. Learn more";
 
 "location choice header" = "Choose a Location";
 
@@ -157,7 +167,7 @@
 "account action encryption" = "Encryption";
 "account action devices" = "Devices";
 "account action inbox" = "Inbox";
-"account action logout" = "Logout";
+"account action logout" = "Logout / Restore account";
 "account action about" = "About";
 "account action tap to show" = "Tap to show";
 "account action restoring" = "Restoring account: %@";
@@ -258,6 +268,7 @@
 "app settings action notifications" = "Open Notification Settings";
 "app settings section details" = "Details";
 "app settings status default" = "System default";
+"app settings start on boot" = "Start on boot";
 
 "intro header" = "Blokada is Active!";
 "intro text" = "A blue ring means that Blokada is working.\n\nRemember, some ads, like YouTube, cannot be blocked. However, you will notice a difference in many other apps.\n\nWe recommend you activate Always on VPN / Connect on Demand in your system settings.";
