--- a/fem/Ui.strings
+++ b/fem/Ui.strings
@@ -45,6 +45,7 @@
 "universal action donate" = "Donate";
 "universal action community" = "Community";
 "universal action open in browser" = "Open in browser";
+"universal action more" = "More";
 
 "universal label help" = "Help";
 "universal status processing" = "Processing... Please wait.";
@@ -158,6 +159,7 @@
 "activity filter show all" = "Show all entries";
 "activity filter show blocked" = "Show blocked only";
 "activity filter show allowed" = "Show allowed only";
+"activity empty text" = "Try using your device, and come back here later, to see where your device connects to.";
 
 "account section header settings" = "Settings";
 "account status text" = "Your BLOKADA %@ account is active until %@.";
@@ -269,6 +271,13 @@
 "app settings section details" = "Details";
 "app settings status default" = "System default";
 "app settings start on boot" = "Start on boot";
+"app settings use dns over https" = "Use DNS over HTTPS";
+"app settings backup" = "Use cloud backup";
+"app settings section advanced" = "Advanced";
 
 "intro header" = "Blokada is Active!";
 "intro text" = "A blue ring means that Blokada is working.\n\nRemember, some ads, like YouTube, cannot be blocked. However, you will notice a difference in many other apps.\n\nWe recommend you activate Always on VPN / Connect on Demand in your system settings.";
+
+"location region america" = "America";
+"location region europe" = "Europe";
+"location region asia" = "Asia";
