--- a/fem/Ui.strings
+++ b/fem/Ui.strings
@@ -46,6 +46,7 @@
 "universal action community" = "Community";
 "universal action open in browser" = "Open in browser";
 "universal action more" = "More";
+"universal action download" = "Download";
 
 "universal label help" = "Help";
 "universal status processing" = "Processing... Please wait.";
@@ -63,6 +64,7 @@
 "notification update header" = "An update is available";
 "alert update body" = "Blokada %@ is now available for download. We recommend keeping the app up to date, and downloading it only from our official sources.";
 "update label updated" = "Updated!";
+"update downloading description" = "The update is now downloading, and you should see the installation prompt shortly.";
 
 "account active forever" = "Forever";
 
