--- a/fem/Ui.strings
+++ b/fem/Ui.strings
@@ -22,6 +22,7 @@
 "error device offline" = "Your device is offline";
 "error account inactive" = "Your account is inactive. Please activate your account in order to continue using BLOKADA+.";
 "error account inactive after restore" = "This does not seem to be a valid active account. If you believe this is a mistake, please contact us by tapping the help icon at the top.";
+"error account invalid" = "This account ID seems invalid.";
 "error creating account" = "Could not create a new account. Please try again later.";
 "error fetching data" = "This action could not be completed. Make sure you are online, and try again later. If the problem persists, please contact us by tapping the help icon at the top.";
 "error tunnel" = "Could not establish the VPN. Please restart your device, or remove Blokada VPN profile in system settings, and try again.";
@@ -32,6 +33,7 @@
 "error vpn expired" = "The VPN is disabled. Please update your subscription to continue using BLOKADA+";
 "error payment inactive after restore" = "Your previous payment was restored, but the subscription has already expired. If you believe this is a mistake, please contact us by tapping the help icon at the top.";
 "error payment failed" = "Payments are unavailable at this moment. Make sure you are online, and try again later. If the problem persists, please contact us by tapping the help icon at the top.";
+"error payment failed alternative" = "Could not complete your payment. Please make sure your data is correct, and try again. If the problem persists, please contact us by tapping the help icon at the top.";
 "error payment not available" = "Payments are unavailable for this device. Either Apple Pay is not activated, or we do not handle purchases in your country yet.";
 "error payment canceled" = "The payment has been canceled. You have not been charged.";
 "error pack install" = "Could not install (or uninstall) this feature. Please try again later.";
@@ -53,6 +55,7 @@
 "universal action contact us" = "Contact us";
 "universal action support" = "Support";
 "universal action upgrade" = "Upgrade to BLOKADA+";
+"universal action upgrade short" = "Upgrade";
 "universal action yes" = "Yes";
 "universal action no" = "No";
 "universal action donate" = "Donate";
@@ -60,8 +63,11 @@
 "universal action open in browser" = "Open in browser";
 "universal action more" = "More";
 "universal action download" = "Download";
+"universal action news" = "News";
+"universal action delete" = "Delete";
 
 "universal label help" = "Help";
+"universal label welcome" = "Welcome!";
 "universal status processing" = "Processing... Please wait.";
 "universal status copied to clipboard" = "Copied to Clipboard";
 "universal status restart required" = "Please restart the app for the changes to take effect.";
@@ -80,6 +86,7 @@
 "update downloading description" = "The update is now downloading, and you should see the installation prompt shortly.";
 
 "account active forever" = "Forever";
+"account active forever full" = "Active forever";
 
 "main ask for permissions header" = "Just one more step";
 "main ask for permissions description" = "Blokada is using a VPN Configuration to block ads. You will be asked to allow it in the next step.";
@@ -185,11 +192,18 @@
 "account action my account" = "My account";
 "account action encryption" = "Encryption";
 "account action devices" = "Devices";
+"account action new device" = "New device";
 "account action inbox" = "Inbox";
 "account action logout" = "Restore purchase";
+"account action logout only" = "Log out";
+"account action create" = "Generate new account";
 "account action about" = "About";
 "account action tap to show" = "Tap to show";
 "account action restoring" = "Restoring account: %@";
+"account label enter to continue" = "Enter your account ID to continue";
+"account restore description" = "Don't worry, if you lost or forgot your account ID, we can recover it. Please contact our support, and provide us information that will allow us to identify your purchase (eg. last 4 digits of your credit card, or PayPal email).";
+"account create description" = "This is your account ID. You should write it down, as it is the only way for you to get access to your subscription. Also, do not share it with anyone, so your account won't get stolen.";
+"account create confirm" = "I know my account ID";
 
 "account section header my subscription" = "My Subscription";
 "account section header general" = "General";
@@ -199,6 +213,9 @@
 "account label active until" = "Active until";
 "account action manage subscription" = "Manage subscription";
 "account action why upgrade" = "Why should I upgrade?";
+"account subscription header renew" = "Renew automatically";
+"account subscription header payment method" = "Payment method";
+"account subscription renew unsupported" = "Your payment method does not support auto renew.";
 
 "account unlock to show" = "Unlock to show your account ID";
 
@@ -206,6 +223,11 @@
 "account logout description" = "Please enter another account ID, or go back to keep using your existing account (this app cannot be used without one).";
 "account id status unchanged" = "(unchanged)";
 "account action how to restore" = "How do I restore my old account?";
+
+"account subscription days remaining" = "Days remaining: %@";
+"account devices remaining" = "Devices remaining: %@";
+"account devices not available" = "Not available";
+"account devices out of" = "%@ out of %@";
 
 "account encrypt level low" = "Low";
 "account encrypt level medium" = "Medium";
@@ -228,6 +250,15 @@
 "account lease label devices list" = "These devices are connected to your account.";
 "account lease label devices" = "Devices";
 "account lease label this device" = " (this device)";
+"account lease label name" = "Name of device";
+"account lease label location" = "Location";
+"account lease action generate" = "Generate Config";
+"account lease action download" = "Download Config";
+"account lease generated" = "Device added! Download the configuration to use it on any device supported by Wireguard.";
+"account lease wireguard desc" = "Blokada uses Wireguard. Configurations can be downloaded when creating new devices.";
+"account lease label dns" = "DNS";
+"account lease action dns" = "Choose a DNS";
+"account lease label public key" = "Public Key";
 
 "account support action how help" = "How can we help you?";
 "account support action kb" = "Open Knowledge Base";
@@ -260,6 +291,18 @@
 "payment subscription many months" = "%@ Months";
 "payment subscription per month" = "%@ per month";
 "payment subscription offer" = "Save %@";
+
+"payment success label" = "Thanks!";
+"payment success desc" = "Your account is now active! You may now use all Blokada Plus features on all your devices.";
+
+"payment ongoing desc" = "Your payment is now being processed. In case of PayPal, it may take up to 24 hours. Other payment methods shouldn't take more than an hour. If you feel like it is taking too long, please contact us.";
+"payment pay google" = "Pay with Google Pay";
+"payment pay apple" = "Pay with Apple Pay";
+"payment change method" = "Change";
+"payment action pay" = "Pay %@";
+"payment action pay period" = "Pay %@ each period";
+"payment label email" = "Email";
+"payment crypto desc" = "To pay with your cryptocurrency wallet, tap the button below.";
 
 "apps section header" = "Apps";
 "apps label installed" = "Installed";
