--- a/fem/Ui.strings
+++ b/fem/Ui.strings
@@ -65,6 +65,7 @@
 "universal action download" = "Download";
 "universal action news" = "News";
 "universal action delete" = "Delete";
+"universal action hide" = "Hide";
 
 "universal label help" = "Help";
 "universal label welcome" = "Welcome!";
@@ -79,10 +80,12 @@
 "notification vpn expired header" = "BLOKADA+ subscription expired";
 "notification vpn expired subtitle" = "The VPN is disabled";
 "notification vpn expired body" = "Please update your subscription to continue using BLOKADA+";
+"notification desc settings" = "Swipe the notification left or right for settings.";
 
 "notification update header" = "An update is available";
 "alert update body" = "Blokada %@ is now available for download. We recommend keeping the app up to date, and downloading it only from our official sources.";
 "update label updated" = "Updated!";
+"update desc updated" = "You are now using the newest version of Blokada! Remember, donating or subscribing to Blokada Plus allows us to continue improving the app.";
 "update downloading description" = "The update is now downloading, and you should see the installation prompt shortly.";
 
 "account active forever" = "Forever";
