--- a/fem/Ui.strings
+++ b/fem/Ui.strings
@@ -384,3 +384,42 @@
 "homepage about point three" = "Requires no root or jailbreak";
 "homepage about point four" = "Built in VPN for better protection";
 "homepage about action plus" = "Learn more about Blokada Plus";
+
+"homepage download header" = "Download Blokada";
+"homepage download subheader" = "Blokada is available for several platforms, choose yours.";
+"homepage download option android five" = "Blokada 5 for Android";
+"homepage download option android slim" = "Blokada 5 Slim for Android";
+"homepage download option android four" = "Blokada 4 for Android";
+"homepage download option ios" = "Blokada 5 for iOS";
+"homepage download option other" ="Blokada for other platforms";
+"homepage download desc other" = "Currently, we do not provide Blokada for other platforms. However, if you are Blokada Plus user, you can use our VPN on Windows, Linux, Mac, and other platforms where Wireguard is available.";
+"homepage download desc ios" = "Blokada 5 is simply available on App Store.";
+"homepage download action ios" = "Open App Store";
+"homepage download desc android five" = "This is our new, recommended version <b>for smartphones and tablets with Android 7 or newer</b>. It is simpler and faster compared to Blokada 4.";
+"homepage download action android five" = "Blokada 5 .apk";
+"homepage download action android five beta" = "Beta .apk";
+"homepage download desc android slim" = "Blokada Slim is a <b>lightweight version of the app</b>, and it only contains features allowed by the Google Play policy.";
+"homepage download action android slim" = "Open Google Play";
+"homepage download desc android four" = "We still maintain the older version of Blokada. It has more features, and works on older devices, and TVs.";
+"homepage download action android four" = "Blokada 4 .apk";
+"homepage download action android four fdroid" = "Open F-Droid";
+
+"homepage community header" = "The Community";
+"homepage community desc" = "Blokada is not only the privacy app. It is also the community of people who care about their digital privacy and wellbeing. You will find us on our forum, where you can ask any questions you may have. We are also present on other social media and chats.";
+"homepage community cta subheader" = "Join us and say hi!";
+"homepage community cta desc"  = "We base all of our work on the feedback of our users. Tell us what you think, what should we improve, or just hang out.";
+"homepage community cta action" = "Go to forums";
+"homepage community opinions" = "Here are some of the opinions from our users.";
+
+"homepage support header" = "Support the project";
+"homepage support desc" = "If you like what we do, consider supporting us, so that we can continue developing new features and improvements. This way, Blokada can stay open source and free forever.";
+"homepage support cta header" = "Blokada is made by you";
+"homepage support cta desc" = "Blokada is an open source project, which means you can be sure it's always going to be free, safe to use, and without any hidden agenda. We believe this is the only right way to develop a privacy app you can trust.";
+"homepage support cta desc more" = "However, developing a quality app like Blokada requires a considerable amount of resources. This project exists thanks to the support of awesome people like you!.";
+"homepage support cta action" = "Donate (card, Paypal)";
+"homepage support cta action alt" = "Donate (bank, crypto)";
+
+"homepage developer header" = "Are you a developer";
+"homepage developer subheader" = "and want to make Blokada better?";
+"homepage developer desc" = "Blokada is an open source project dedicated to developing the best ad blocker and privacy app for Android and iOS. Check our Github, and let us know, if you need any assistance to make your first PR.";
+"homepage developer action" = "Go to repo";
